more css changes to fix empty background stretch bug

--- a/css/projectCSS.css
+++ b/css/projectCSS.css
@@ -48,14 +48,18 @@ html{
     color:MediumAquaMarine;
     margin-left: 5%;
     margin-right: 5%;
-
 }
 
 
 
 .card{
     min-width: 250px;
-    max-width: 500px;
+}
+
+.card-img-top{
+    width: auto;
+    height: 15vw;
+    object-fit: cover;
 }
 
 /*------QUIZ QUESTIONS------*/
